是專題殺了我

--- a/data/bot-knowledge.json
+++ b/data/bot-knowledge.json
@@ -48,6 +48,10 @@
     "遊戲就像真實經營麵包坊，需要細心觀察市場，做出明智選擇",
     "行銷是透過創造、溝通、傳遞價值來滿足顧客需求並達成組織目標的活動過程",
     "行銷不只是賣產品，而是從了解顧客需求出發，提供滿足需求的產品",
+    "行銷是什麼：行銷是讓顧客知道、喜歡、想要、並且願意推薦你的產品或服務的一系列活動",
+    "行銷是什麼：行銷就像交朋友，先了解對方需要什麼，然後提供他們需要的東西，建立信任和長期關係",
+    "行銷是什麼：簡單來說，行銷就是創造價值、溝通價值、傳遞價值，最終滿足顧客需求並達成企業目標",
+    "行銷是什麼：行銷從了解顧客需求開始，設計產品、訂價格、選通路、做推廣，最終讓顧客滿意並達成企業目標",
     "行銷以顧客為中心，銷售以產品為出發點，兩者出發點不同",
     "行銷的演進從生產導向、產品導向、銷售導向，演進到行銷導向和社會行銷導向",
     "現代行銷強調顧客價值、關係建立和長期互動，而非僅是單次交易",
@@ -530,6 +534,77 @@
       "每天先看景氣燈號，決定進貨量，然後應對7個隨機事件～每個選擇都會影響收益和聲望！",
       "經營麵包坊就像照顧小樹苗～需要細心觀察市場，做出明智選擇，才能讓店鋪茁壯成長！"
     ],
+    "stock": [
+      "進貨要根據景氣燈號決定～綠燈正常進貨，紅燈可以多進一些，藍燈要保守一點！",
+      "進貨就像天氣預報～要看景氣燈號來判斷今天顧客多不多，再決定進多少貨～",
+      "進貨只能進一次～太少會缺貨失去客人，太多會浪費造成損失，要仔細判斷！",
+      "進貨策略很重要～要根據景氣燈號、昨天銷售、今天預測來決定進貨量！",
+      "進貨要看景氣燈號～綠燈穩穩進貨，紅燈可以增加進貨量把握商機，藍燈減少進貨避免庫存！"
+    ],
+    "event": [
+      "每天會有7個隨機事件～每個事件都要選擇策略，看結果如何！",
+      "事件會影響收益、聲望和顧客滿意度～要仔細思考再選擇！",
+      "事件就像生活中的挑戰～要根據情況選擇合適的策略，有時候需要冒險，有時候要保守！",
+      "應對事件要靈活～不同情況要用不同策略，多試幾次就能掌握訣竅！"
+    ],
+    "revenue": [
+      "收益是今天賺到的錢～包括營收減去成本，每天都要努力增加收益！",
+      "收益要看營收和成本～營收高、成本低，收益才會好！",
+      "增加收益要靠好策略～選擇正確的進貨量和事件應對方式，才能賺到錢！",
+      "收益是經營的目標～每天結束後會看到今天的收益如何，要持續改善！"
+    ],
+    "reputation": [
+      "聲望是品牌信任度～聲望越高，顧客越信任你，回頭客越多！",
+      "聲望很重要～好的聲望能吸引更多顧客，建立長期關係！",
+      "聲望會受事件選擇影響～做對的決定會提升聲望，做錯的決定會降低聲望！",
+      "建立聲望要長期經營～每次選擇都要考慮對聲望的影響！"
+    ],
+    "satisfaction": [
+      "顧客滿意度是回頭客多寡的指標～滿意度越高，顧客越願意再來！",
+      "顧客滿意度很重要～滿意的顧客會推薦給朋友，不滿意的顧客會影響聲望！",
+      "提升滿意度要靠好服務和好產品～要根據顧客需求來經營！",
+      "顧客滿意度會受事件選擇影響～選擇能提升滿意度的策略很重要！",
+      "顧客滿意度影響重購和推薦意願，要持續關注和改善！",
+      "滿意度調查、NPS評分、焦點團體、社群監聽都可以了解滿意度～",
+      "不滿意要及時處理和補救，好的補救可以增加忠誠度！",
+      "滿意度不只是產品，還包括服務、體驗、互動等各個面向！"
+    ],
+    "report": [
+      "報表會顯示今天的經營成果～包括營收、成本、淨利潤和顧客變化！",
+      "報表很重要～看完報表才知道今天的表現如何，下次可以改善！",
+      "報表在每天結束後會出現～顯示今天賺了多少錢、聲望如何、顧客滿意度如何！",
+      "要仔細看報表～分析今天做對什麼、做錯什麼，下次才能做得更好！"
+    ],
+    "cost": [
+      "成本是經營的支出～包括進貨成本、營運成本等，要控制好成本才能獲利！",
+      "成本管理很重要～成本太高會減少利潤，要想辦法降低成本但不要影響品質！",
+      "成本會受景氣燈號影響～紅燈時成本可能上升，藍燈時成本可能下降！",
+      "要平衡成本和品質～不能為了降低成本而犧牲產品品質和顧客滿意度！"
+    ],
+    "customer": [
+      "顧客是我們最重要的資產～要了解顧客需求，提供他們想要的產品和服務！",
+      "顧客滿意很重要～滿意的顧客會再來，還會推薦給朋友，帶來更多生意！",
+      "要照顧好顧客～從進店到離開，每個環節都要讓顧客感到滿意和溫暖！",
+      "顧客回饋很寶貴～要聽取顧客意見，持續改善產品和服務品質！",
+      "顧客體驗要全旅程管理～認知階段(品牌接觸)、考慮階段(產品比較)、購買階段(交易體驗)、使用階段(售後服務)！",
+      "顧客回饋要系統化收集～滿意度調查、NPS評分、焦點團體、社群監聽，建立完整的顧客聲音(VoC)機制！",
+      "顧客忠誠度要分層經營～新客(獲取)、熟客(留存)、忠客(推薦)、粉絲(擁護)，針對不同層級設計專屬策略！"
+    ],
+    "cost_price": [
+      "成本是經營支出，價格是產品售價～要合理定價，既能獲利又能吸引顧客！",
+      "價格要考慮成本和市場～定太高會失去顧客，定太低會沒有利潤！",
+      "定價策略很重要～要根據成本、競爭對手、顧客需求來決定價格！"
+    ],
+    "inventory": [
+      "庫存管理要精準～太多會浪費，太少會缺貨，要根據需求來進貨！",
+      "庫存會影響收益～庫存太多會增加成本，庫存太少會錯失銷售機會！",
+      "要避免庫存積壓～進貨前要仔細評估，根據景氣燈號和歷史數據來決定！"
+    ],
+    "profit": [
+      "利潤是收益減去成本～要增加利潤就要提高收益或降低成本！",
+      "利潤是經營的目標～每天結束後會看到今天的利潤如何！",
+      "要追求長期利潤～不能只看短期，要建立品牌和顧客關係才能持續獲利！"
+    ],
     "economy": [
       "景氣燈號就像天氣預報一樣～告訴我們今天顧客多不多、進貨貴不貴！",
       "綠燈表示景氣穩定～顧客消費力正常，適合正常進貨量，穩穩經營就好！",
@@ -549,14 +624,21 @@
       "不管什麼天氣，熊熊都會用心烘焙～讓每個人都能感受到溫暖！"
     ],
     "marketing": [
+      "行銷是什麼？簡單來說，行銷就是透過創造、溝通、傳遞價值來滿足顧客需求並達成企業目標的活動過程～不只是賣產品，而是從了解顧客需求出發！",
       "行銷是以顧客為中心的商業活動～透過了解顧客需求、創造價值、建立關係來達成企業目標！",
+      "行銷是什麼？嘿嘿～行銷就是讓顧客知道你的產品、喜歡你的產品、想要買你的產品，並且願意推薦給別人的一系列活動！",
+      "行銷不只是賣東西～它從了解顧客需求開始，設計產品、訂價格、選通路、做推廣，最終讓顧客滿意並達成企業目標！",
+      "行銷是什麼？嗯嗯！行銷就像交朋友～先了解對方需要什麼，然後提供他們需要的東西，建立信任和長期關係，這樣才能成功！",
       "行銷與銷售的差異在於出發點～行銷從顧客需求出發，銷售從產品角度出發，行銷更注重長期關係！",
       "市場區隔是行銷基礎～將異質市場劃分為同質小群體，針對不同客群設計專屬的行銷策略！",
       "差異化是競爭優勢～透過產品特色、服務品質、品牌形象等創造獨特價值，避免價格競爭！",
       "顧客體驗是現代行銷核心～從認知、考慮、購買到使用，每個接觸點都要提供一致且優質的體驗！",
       "口碑行銷的影響力是廣告的5倍～滿意的顧客會主動推薦，不滿意的顧客會影響更多潛在客戶！",
       "危機管理考驗品牌韌性～快速回應、透明溝通、負責任的態度能將危機轉為建立信任的機會！",
-      "顧客回饋是持續改善的動力～建立回饋機制、分析數據、快速迭代，讓產品服務不斷優化！"
+      "顧客回饋是持續改善的動力～建立回饋機制、分析數據、快速迭代，讓產品服務不斷優化！",
+      "行銷包含4P策略～產品(Product)創造價值、價格(Price)反映價值、通路(Place)傳遞價值、推廣(Promotion)溝通價值！",
+      "行銷的目的不只是賣產品，還要建立品牌、培養顧客忠誠度、創造長期價值～這樣才能永續經營！",
+      "現代行銷強調顧客價值和關係建立，要了解顧客在想什麼、需要什麼，然後提供他們真正想要的東西！"
     ],
     "strategy": [
       "產品策略要基於市場需求～透過市場調研、顧客訪談、數據分析來設計符合目標客群的產品！",
@@ -582,11 +664,6 @@
       "行銷4P是策略組合～產品(Product)創造價值、價格(Price)反映價值、通路(Place)傳遞價值、推廣(Promotion)溝通價值！",
       "4P要協調一致～產品定位決定價格策略，價格策略影響通路選擇，通路選擇影響推廣方式，四者要相互配合！",
       "4P策略要因時制宜～不同生命週期階段、不同競爭環境、不同目標客群，4P組合都要相應調整！"
-    ],
-    "customer": [
-      "顧客體驗要全旅程管理～認知階段(品牌接觸)、考慮階段(產品比較)、購買階段(交易體驗)、使用階段(售後服務)！",
-      "顧客回饋要系統化收集～滿意度調查、NPS評分、焦點團體、社群監聽，建立完整的顧客聲音(VoC)機制！",
-      "顧客忠誠度要分層經營～新客(獲取)、熟客(留存)、忠客(推薦)、粉絲(擁護)，針對不同層級設計專屬策略！"
     ],
     "brand": [
       "品牌管理要建立品牌資產～品牌知名度(認知)、品牌聯想(形象)、品牌品質(感知)、品牌忠誠(關係)，四要素缺一不可！",
@@ -1052,12 +1129,6 @@
       "交叉銷售是向現有顧客銷售其他產品或服務～",
       "向上銷售是說服顧客購買更高價或更好的產品！",
       "要根據顧客需求和行為推薦，不要硬推銷！"
-    ],
-    "satisfaction": [
-      "顧客滿意度影響重購和推薦意願，要持續關注和改善！",
-      "滿意度調查、NPS評分、焦點團體、社群監聽都可以了解滿意度～",
-      "不滿意要及時處理和補救，好的補救可以增加忠誠度！",
-      "滿意度不只是產品，還包括服務、體驗、互動等各個面向！"
     ],
     "nps": [
       "淨推薦分數(NPS)衡量顧客推薦意願，是顧客忠誠度的重要指標！",
